<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

<!--    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margenIzquierdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margenDerecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95"/>

    <!--<androidx.constraintlayout.widget.Guideline
        android:id="@+id/margernSuperior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".12"/>-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margernInfNomProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margernInfTallaProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".28"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margernInfColProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".36"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margernInfPrecioProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".44"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margernInferior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".70"/>

    <EditText
        android:id="@+id/nombre_producto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="08dp"
        android:ems="10"
        android:hint="@string/ingrese_nombre_del_producto"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toRightOf="@id/margenIzquierdo"
        app:layout_constraintRight_toLeftOf="@id/margenDerecho"
        app:layout_constraintBottom_toBottomOf="@id/margernInfNomProd" />

    <EditText
        android:id="@+id/talla_producto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="08dp"
        android:ems="10"
        android:hint="@string/ingrese_la_talla_del_producto"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toRightOf="@id/margenIzquierdo"
        app:layout_constraintRight_toLeftOf="@id/margenDerecho"
        app:layout_constraintBottom_toBottomOf="@id/margernInfTallaProd" />

    <EditText
        android:id="@+id/color_producto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="08dp"
        android:ems="10"
        android:hint="@string/ingrese_el_color_del_producto"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toRightOf="@id/margenIzquierdo"
        app:layout_constraintRight_toLeftOf="@id/margenDerecho"
        app:layout_constraintBottom_toBottomOf="@id/margernInfColProd" />


    <EditText
        android:id="@+id/precio_producto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="08dp"
        android:ems="10"
        android:hint="@string/ingrese_el_precio_del_producto"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toRightOf="@id/margenIzquierdo"
        app:layout_constraintRight_toLeftOf="@id/margenDerecho"
        app:layout_constraintBottom_toBottomOf="@id/margernInfPrecioProd" />

    <Button
        android:id="@+id/button_registrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/registrar"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/margenIzquierdo"
        app:layout_constraintRight_toLeftOf="@id/margenDerecho"
        app:layout_constraintBottom_toBottomOf="@id/margernInferior" />

</androidx.constraintlayout.widget.ConstraintLayout>